# converge-monitor

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
.github/workflows/: docker.yml
src/: main.rs  monitor.rs  scraping.rs  updates.rs
src/scraping/: extract_data.rs  js_estree.rs  js_url.rs
src/scraping/extract_data/: platforms.rs  rewards.rs  top_level_elements.rs
