[package]
name = "converge-monitor"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/GGORG0/converge-monitor"

[dependencies]
chrono = "0.4.41"
color-eyre = "0.6.5"
dotenvy = "0.15.7"
hyper-rustls = "0.27.7"
hyper-util = "0.1.14"
oxc_allocator = "0.75.0"
oxc_ast = "0.75.0"
oxc_ast_visit = { version = "0.75.0", features = ["serialize"] }
oxc_diagnostics = "0.75.0"
oxc_parser = "0.75.0"
oxc_span = "0.75.0"
reqwest = { version = "0.12.20", default-features = false, features = [
    "rustls-tls",
    "http2",
    "charset",
] }
rustls = { version = "0.23.28" }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
slack-morphism = { version = "2.14.0", features = ["hyper"] }
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = [
    "chrono",
    "json",
    "env-filter",
    "local-time",
    "serde",
    "serde_json",
    "time",
] }
url = "2.5.4"
